<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_gravity="center">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="#00000000"
        android:hint="Write something..."/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorPrimaryDark"
        android:src="@drawable/ic_done_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_text_view"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_text" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="130dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="15dp"
        android:text="Date"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="130dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/date_text_view"
        android:layout_marginStart="16dp"
        tools:layout_editor_absoluteY="50dp"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_text"
        android:layout_marginTop="16dp"
        android:text="Time"
        android:textSize="18sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>